# lkdn-scraping-with-scrapy

./: README.md  pyproject.toml
data/: data.jsonl
etl/etl/: middlewares.py  settings.py
etl/etl/spiders/: linkedin.py
src/coleta/: data_requirements.json  settings.py
src/coleta/coleta/: items.py  settings.py
src/coleta/coleta/spiders/: linkedin.py  urls_to_linkedin.py
src/coleta/services/: json_load.py
src/coleta/spiders/: file_example.html  linkedin.py  urls_to_linkedin.py
